fixes product details alignment

--- a/carousel/custom-carousel-items.css
+++ b/carousel/custom-carousel-items.css
@@ -80,6 +80,7 @@
 }
 
 .product-image {
+  place-content: start;
   place-items: start;
 
   & sup {
